code/kubes/nextcloud/nextcloud/nextcloud-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: nextcloud-server
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-server-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-server-pod
    spec:
      volumes:
      # Create the shared files volume to be used in both pods
      - name: server-storage
        persistentVolumeClaim:
          claimName: nextcloud-storage
      # Add the ConfigMap we declared in nginx-config.yaml as a volume for the pod
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      containers:
      - name: nextcloud
        image: nextcloud:25-fpm-alpine
        imagePullPolicy: Always
        volumeMounts:
        - name: server-storage
          mountPath: /var/www/html
          subPath: server-data
      # Our nginx container, which uses the configuration declared in
      # nginx-config.yaml, along with the files shared with the PHP-FPM app.
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: server-storage
          mountPath: /var/www/html
          subPath: server-data
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud-server
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-server-pod
  ports:
  - protocol: TCP
    port: 80
